--- a/Source/core/css/html.css
+++ b/Source/core/css/html.css
@@ -686,7 +686,7 @@ input[type="file"] {
     text-align: start !important;
 }
 
-input:-webkit-autofill, textarea:-webkit-autofill {
+input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
     background-color: #FAFFBD !important;
     background-image:none !important;
     color: #000000 !important;
